# AI-constrained-DeFI-Agent

./: .env.example  .gitignore  Claude.md  README.md
ai/: pyproject.toml
ai/ai_agent/: __init__.py
backend/: docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
contracts/: foundry.toml
indexer/: README.md
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
risk-engine/: pyproject.toml
risk-engine/risk_engine/: __init__.py
