[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defi-agent-backend"
version = "0.1.0"
description = "FastAPI orchestration service for DeFi agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.37",
    "psycopg2-binary==2.9.10",
    "redis==5.2.1",
    "web3==7.6.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.25.3",
    "mypy==1.14.1",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
